test/invalid/EternalComments/EternalComments.plume
/**
 * There is a comments block which doesn't end 
 *
 * @author 37017, Joao Ramalho
 * @version $Id: EternalComments.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class Radius extends Object is

  field radius : Integer
  
  method radius : () -> Integer is
    radius
    
  /**
   *...
   *......
   *.........